# B-interpolation-and-fitting

./: CMakeLists.txt  README.md  main.cpp
include/: algorithm.h  dataset.h  render.h
points_info/: test2.yaml  test3.yaml
points_surface/: test1.yaml  test2.yaml  test4.yaml
src/: CMakeLists.txt  dataset.cpp  render.cpp
